# vmux

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  improve.md  install.sh  phone-resize-plan.md  todo.md
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  phone-contract.yml  release.yml
benches/: hot_path.rs
docs/: architecture.md  cli.md  config.md  config.schema.json  ports.md  relay.md  troubleshooting.md
ops/: deploy-site.sh  vmux-site-server.py  vmux-site.service
services/push-gateway/: README.md  server.mjs  server.test.mjs
src/: agent_hooks.rs  cli.rs  config.rs  daemon.rs  input.rs  main.rs  model.rs  paths.rs  protocol.rs  relay.rs  sync.rs  ui.rs  update.rs
src/daemon/: browser.rs  mod.rs  ports.rs  view_size.rs
src/detect/: manifest.rs  mod.rs
src/relay/: auth.rs  mod.rs  paste_page.html
src/ui/: command_palette.rs  input_batch.rs  mod.rs  ports_panel.rs  settings_panel.rs  theme.rs
website/: 404.html  CNAME  README.md  index.html  install.html  privacy.html  remote.html  robots.txt  site.webmanifest  sitemap.xml  support.html
website/assets/: site.css  site.js
website/docs/: agents.html  architecture.html  cli.html  concepts.html  configuration.html  getting-started.html  index.html  keyboard-shortcuts.html  phone-relay.html  ports.html  troubleshooting.html
