[package]
name = "vmux"
version = "0.1.0"
edition = "2021"
description = "The Linux terminal born from the cmux revolution — agent-first TTY multiplexer"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.27"
daemonize = "0.5"
dirs = "5"
getrandom = "0.2"
libc = "0.2"
portable-pty = "0.8"
ratatui = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shell-words = "1"
thiserror = "1"
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
unicode-width = "0.1"
vt100 = "0.16.2"
