[package]
name = "vmux-tui"
version = "0.5.0"
edition = "2021"
rust-version = "1.87"
description = "The Linux terminal born from the cmux revolution — agent-first TTY multiplexer"
license = "MIT"
authors = ["Mayed Abdulla <UAEpro@live.com>"]
readme = "README.md"
keywords = ["terminal", "multiplexer", "tui", "cli", "tmux"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/UAEpro/vmux"
homepage = "https://vmux.sh"
exclude = [
    "*.md",
    "!README.md",
    ".github/",
    ".agents/",
    ".claude/",
    ".codex/",
    "install.sh",
]

# The crate is published as `vmux-tui` (the `vmux` name was already taken on
# crates.io), but the installed command is still `vmux`.
[[bin]]
name = "vmux"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.27"
daemonize = "0.5"
dirs = "5"
getrandom = "0.2"
libc = "0.2"
portable-pty = "0.9"
ratatui = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
shell-words = "1"
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
unicode-width = "0.2"
ureq = { version = "2.12", features = ["json"] }
vt100 = "0.16.2"

# Dev builds: optimize dependencies (vt100 parsing, serde_json, ratatui are the
# hot path and are 10-50x slower unoptimized) while keeping the vmux crate
# itself at opt-level 0 for fast incremental compiles. Dependencies only
# recompile when they change, so the one-time cost is paid on the next build.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Release builds ship as prebuilt tarballs and via `cargo install`, so trade
# compile time for a smaller, faster binary. `panic` is left at the default
# unwind: the daemon deliberately recovers from a poisoned mutex after a handler
# thread panics (see `sync::MutexExt`), and `panic = "abort"` would turn that
# single-thread failure back into a dead daemon.
[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

[[bench]]
name = "hot_path"
harness = false
